[package]
name = "tokio_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
derive_more = { version = "1.0.0-beta", features = ["from"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"